---------------------------------------------------------------------------
Version 5.5.7  [V5-BETA] (rgerhards), 2010-08-??
- doc bugfix: pmlastmsg doc samples had errors
- bugfix[minor]: pmrfc3164sd had invalid name (resided in rsyslog name 
  space, what should not be the case for a contributed module)
---------------------------------------------------------------------------
Version 5.5.6  [DEVEL] (rgerhards), 2010-07-21
- added parser modules
  * pmlastmsg, which supports the notoriously malformed "last message
    repeated n times" messages from some syslogd's (namely sysklogd)
  * pmrfc3164sd (contributed), supports RFC5424 structured data in 
    RFC3164 messages [untested]
- added new module type "string generator", used to speed up output
  processing. Expected speedup for (typical) rsyslog processing is
  roughly 5 to 6 percent compared to using string-based templates.
  They may also be used to do more complex formatting with custom
  C code, what provided greater flexibility and probably far higher
  speed, for example if using multiple regular expressions within a 
  template.
- added 4 string generators for
  * RSYSLOG_FileFormat
  * RSYSLOG_TraditionalFileFormat
  * RSYSLOG_ForwardFormat
  * RSYSLOG_TraditionalForwardFormat
- bugfix: mutexes used to simulate atomic instructions were not destructed
- bugfix: regression caused more locking action in msg.c than necessary
- bugfix: "$ActionExecOnlyWhenPreviousIsSuspended on" was broken
- bugfix: segfault on HUP when "HUPIsRestart" was set to "on"
  thanks varmojfekoj for the patch
- bugfix: default for $OMFileFlushOnTXEnd was wrong ("off").
  This, in default mode, caused buffered writing to be used, what
  means that it looked like no output were written or partial
  lines. Thanks to Michael Biebl for pointing out this bug.
- bugfix: programname filter in ! configuration can not be reset
  Thanks to Kiss Gabor for the patch.
---------------------------------------------------------------------------